syntax = "proto3";

package pushpb;

//import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";

option go_package = "api";

service Push {
    rpc SendSms(SendSmsReq) returns (SendSmsRes);
    rpc CheckSmsCode(CheckSmsCodeReq) returns(CheckSmsCodeRes);
}

enum SmsType {
    Login = 0;
    Bind = 1;
    VIP = 2;
}

message SendSmsReq {
    string group = 1;
    int64 mobile = 2;
    SmsType type = 3;
}

message SendSmsRes {
    bool ok = 1;
}

message CheckSmsCodeReq {
    string code = 1;
    int64 mobile = 2;
    SmsType type = 3;
}

message CheckSmsCodeRes {
    bool ok = 1;
}
